@@ -3,6 +3,7 @@ package com.personaowl.oa.notice.service.impl;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.personaowl.oa.common.core.error.BusinessException;
 import com.personaowl.oa.common.core.error.ErrorCode;
+import com.personaowl.oa.common.redis.CacheNames;
 import com.personaowl.oa.notice.domain.dto.NoticeCreateRequest;
 import com.personaowl.oa.notice.domain.dto.NoticeQueryRequest;
 import com.personaowl.oa.notice.domain.dto.NoticeUpdateRequest;
@@ -18,10 +19,11 @@ import com.personaowl.oa.notice.mapper.NoticeReadMapper;
 import com.personaowl.oa.notice.service.NoticeService;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -36,6 +38,7 @@ public class NoticeServiceImpl implements NoticeService {
 
     @Override
     @Transactional
+    @CacheEvict(cacheNames = CacheNames.NOTICE_UNREAD_COUNT, allEntries = true)
     public Notice create(NoticeCreateRequest request, Long publisherId) {
         Notice notice = new Notice();
         notice.setTitle(request.getTitle());
@@ -57,6 +60,7 @@ public class NoticeServiceImpl implements NoticeService {
 
     @Override
     @Transactional
+    @CacheEvict(cacheNames = CacheNames.NOTICE_UNREAD_COUNT, allEntries = true)
     public Notice update(Long id, NoticeUpdateRequest request, Long operatorId) {
         Notice notice = requireById(id);
         if (NoticeStatus.OFFLINE.name().equals(notice.getStatus())) {
@@ -78,6 +82,7 @@ public class NoticeServiceImpl implements NoticeService {
 
     @Override
     @Transactional
+    @CacheEvict(cacheNames = CacheNames.NOTICE_UNREAD_COUNT, allEntries = true)
     public Notice delete(Long id, Long operatorId) {
         Notice notice = requireById(id);
         if (NoticeStatus.PUBLISHED.name().equals(notice.getStatus())) {
@@ -92,6 +97,7 @@ public class NoticeServiceImpl implements NoticeService {
 
     @Override
     @Transactional
+    @CacheEvict(cacheNames = CacheNames.NOTICE_UNREAD_COUNT, allEntries = true)
     public Notice publish(Long id, Long publisherId) {
         Notice notice = requireById(id);
         if (NoticeStatus.PUBLISHED.name().equals(notice.getStatus())) {
@@ -111,6 +117,7 @@ public class NoticeServiceImpl implements NoticeService {
 
     @Override
     @Transactional
+    @CacheEvict(cacheNames = CacheNames.NOTICE_UNREAD_COUNT, allEntries = true)
     public Notice offline(Long id, Long publisherId) {
         Notice notice = requireById(id);
         if (NoticeStatus.OFFLINE.name().equals(notice.getStatus())) {
@@ -135,18 +142,19 @@ public class NoticeServiceImpl implements NoticeService {
 
     @Override
     public NoticePageVO<NoticeListItemVO> listPublished(NoticeQueryRequest request, Long currentUserId) {
-        List<Notice> notices = queryNotices(request, true);
-        return new NoticePageVO<>(notices.size(), toListItems(notices, currentUserId));
+        NoticeQueryResult result = queryNotices(request, true);
+        return new NoticePageVO<>(result.total(), toListItems(result.records(), currentUserId));
     }
 
     @Override
     public NoticePageVO<NoticeListItemVO> listAdmin(NoticeQueryRequest request, Long currentUserId) {
-        List<Notice> notices = queryNotices(request, false);
-        return new NoticePageVO<>(notices.size(), toListItems(notices, currentUserId));
+        NoticeQueryResult result = queryNotices(request, false);
+        return new NoticePageVO<>(result.total(), toListItems(result.records(), currentUserId));
     }
 
     @Override
     @Transactional
+    @CacheEvict(cacheNames = CacheNames.NOTICE_UNREAD_COUNT, key = "#currentUserId")
     public NoticeDetailVO read(Long id, Long currentUserId) {
         Notice notice = requireById(id);
         if (!NoticeStatus.PUBLISHED.name().equals(notice.getStatus())) {
@@ -168,11 +176,12 @@ public class NoticeServiceImpl implements NoticeService {
     }
 
     @Override
+    @Cacheable(cacheNames = CacheNames.NOTICE_UNREAD_COUNT, key = "#currentUserId", sync = true)
     public NoticeUnreadCountVO unreadCount(Long currentUserId) {
         return new NoticeUnreadCountVO(noticeReadMapper.countUnreadByUser(currentUserId));
     }
 
-    private List<Notice> queryNotices(NoticeQueryRequest request, boolean publishedOnly) {
+    private NoticeQueryResult queryNotices(NoticeQueryRequest request, boolean publishedOnly) {
         if (request == null) {
             request = new NoticeQueryRequest();
         }
@@ -180,22 +189,22 @@ public class NoticeServiceImpl implements NoticeService {
                 .eq(Notice::getDeleted, 0)
                 .like(request.getKeyword() != null && !request.getKeyword().isBlank(), Notice::getTitle, request.getKeyword())
                 .eq(request.getStatus() != null && !request.getStatus().isBlank(), Notice::getStatus, request.getStatus())
-                .eq(request.getTopFlag() != null, Notice::getTopFlag, request.getTopFlag())
-                .orderByDesc(Notice::getTopFlag)
-                .orderByDesc(Notice::getPublishedAt)
-                .orderByDesc(Notice::getUpdatedAt);
+                .eq(request.getTopFlag() != null, Notice::getTopFlag, request.getTopFlag());
         if (publishedOnly) {
             wrapper.eq(Notice::getStatus, NoticeStatus.PUBLISHED.name());
         }
         int page = Math.max(1, request.getPage() == null ? 1 : request.getPage());
-        int size = Math.max(1, request.getSize() == null ? 20 : request.getSize());
-        List<Notice> all = noticeMapper.selectList(wrapper);
-        int fromIndex = Math.min((page - 1) * size, all.size());
-        int toIndex = Math.min(fromIndex + size, all.size());
-        if (fromIndex >= toIndex) {
-            return Collections.emptyList();
+        int size = Math.min(100, Math.max(1, request.getSize() == null ? 20 : request.getSize()));
+        long total = noticeMapper.selectCount(wrapper);
+        if (total == 0) {
+            return new NoticeQueryResult(0, List.of());
         }
-        return all.subList(fromIndex, toIndex);
+        long offset = (long) (page - 1) * size;
+        wrapper.orderByDesc(Notice::getTopFlag)
+                .orderByDesc(Notice::getPublishedAt)
+                .orderByDesc(Notice::getUpdatedAt)
+                .last("LIMIT " + offset + ", " + size);
+        return new NoticeQueryResult(total, noticeMapper.selectList(wrapper));
     }
 
     private List<NoticeListItemVO> toListItems(List<Notice> notices, Long currentUserId) {
@@ -248,5 +257,8 @@ public class NoticeServiceImpl implements NoticeService {
         vo.setViewCount(notice.getViewCount());
         vo.setRead(currentUserId != null && noticeReadMapper.existsByNoticeIdAndUserId(notice.getId(), currentUserId));
         return vo;
+    }
+
+    private record NoticeQueryResult(long total, List<Notice> records) {
     }
 }
